opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_optional"
bug-reports: "https://github.com/janestreet/ppx_optional/issues"
dev-repo: "https://github.com/janestreet/ppx_optional.git"
license: "Apache-2.0"
build: [
["jbuilder" "build-package" "ppx_optional" "-j" jobs]
]
depends: [
  "jbuilder"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Pattern matching on flat options

A ppx rewriter that rewrites simple match statements with an if then
else expression.
"
